cleaned up code & fixed problem with header not showing

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,11 +1,12 @@
 header {
   display: flex;
-  height: 400px;
-  width: 100%;
-  color: #ffffff;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 400px;
+  width: 100%;
+  color: #ffffff;
   background-color: #DDA0DD;
   background-image: url("https://www.transparenttextures.com/patterns/clean-gray-paper.png");
+  margin-top: 90px;
 } 
