--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,4 +31,12 @@ main {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
- 
+ .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #f4f1ec;
+}
+
+
+
